<resources>
    <string name="app_name">Super Gallery</string>
    <string name="title_activity_test_compose">TestCompose</string>
    <string name="loading">Loading...</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="rotate">Rotate</string>
    <string name="more">More</string>
    <string name="share">Share</string>
    <string name="edit">Edit</string>
</resources>